--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -16,6 +16,11 @@
                             </li>
                         <% }) %>
                     </ul>
+                    <div class="centered">
+                        <form action="/create-order" method="post">
+                            <button type="submit" class="btn">Order Now</button>
+                        </form>
+                    </div>
                 <% } else { %>
                     <h1>No Products in Cart!</h1>
                 <% } %>
