--- a/public/css/main.css
+++ b/public/css/main.css
@@ -240,6 +240,26 @@ form {
   background: rgb(255, 176, 176);
   color: red;
 }
+
+.pagination {
+  text-align: center;
+}
+
+.pagination a {
+  text-decoration: none;
+  color: #00695c;
+  padding: 0.5rem;
+  border: 1px solid #00695c;
+  margin: 0 1rem;
+
+}
+
+.pagination a:hover,
+.pagination a:active {
+  background-color: #00695c;
+  color: white;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
@@ -249,7 +269,7 @@ form {
     display: none;
   }
 
-  .user-message{
+  .user-message {
     width: 30rem;
   }
 }
