--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -34,8 +34,12 @@
                             </article>
                             <% } %>
                     </div>
+                    <section class="pagination">
+                        <a href="/?page=1">1</a>
+                        <a href="/?page=2">2</a>
+                    </section>
                     <% } else { %>
                         <h1>No Products Found!</h1>
-                        <% } %>
+                    <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
