--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,27 +1,29 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
             <main>
                 <% if (products.length> 0) { %>
-                    <ul>
+                    <ul class="cart__item-list">
                         <% products.forEach(p => { %>
-                            <li>
+                            <li class="cart__item">
                                 <p><%= p.productId.title %> (<%= p.quantity %>)</p>
                                 <form action="/cart-delete-item" method="post">
                                     <input type="hidden" value="<%= p.productId._id %>" name="productId">
                                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                                    <button class="btn" type="submit">Delete</button>
+                                    <button class="btn danger" type="submit">Delete</button>
                                 </form>
                             </li>
                         <% }) %>
                     </ul>
                     <div class="centered">
-                        <form action="/create-order" method="post">
+                        <!-- <form action="/create-order" method="post">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <button type="submit" class="btn">Order Now</button>
-                        </form>
+                        </form> -->
+                        <a class="btn" href="/checkout">Order Now!</a>
                     </div>
                 <% } else { %>
                     <h1>No Products in Cart!</h1>
